@startuml
skinparam classAttributeIconSize 0
skinparam monochrome true
hide circle

interface Calculator {
  {abstract} +addition(a: Number, b: Number): Number
  {abstract} +subtraction(a: Number, b: Number): Number
}

interface Randomizer {
  {abstract} +random(): Number
  {abstract} +randomRange(min: Number, max: Number): Number
}

class Util {
  +multiplication(a: Number, b: Number): Number
}

Calculator <|.. Util
Randomizer <|.. Util
@enduml
